tests/NormalTests/paczka1/small_fuzzy/47597871.err
Error in line 6: vlnvgclHfRD S50 88,5
Error in line 1: TZo13h S600 26,9
Error in line 12: 3Agc S50 90,2
